# esperanto-lexicon

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSING.md  README.md  SETUP.md  pyproject.toml  requirements.txt
data/analysis/: proficiency_baseline.csv  proficiency_baseline_v2.csv  proficiency_v3.csv  unknown_tokens_pooled.txt
data/domain_db/: cbam_definitions.jsonl  cbam_definitions_combined.jsonl  cbam_definitions_fr.jsonl  cbam_definitions_lt.jsonl  du_definitions.jsonl  du_definitions_combined.jsonl  du_definitions_fr.jsonl  du_definitions_lt.jsonl  expert_corpus_candidates.jsonl  expert_corpus_ne_candidates.jsonl  expert_seed_candidates.jsonl  gpmi_definitions.jsonl  gpmi_ne_candidates.jsonl  gpmi_statistical_candidates.jsonl  manual_overrides.jsonl  ucc_definitions.jsonl  ucc_definitions_combined.jsonl  ucc_definitions_fr.jsonl  (+4 more)
docs/: adding_new_domain.md  coverage_report_examples.md  eurlex_pipeline.md
examples/: build_demo.py  score_demo.py  use_from_other_project.py
tests/: test_area_signature.py  test_audit_root_consistency.py  test_batch_coverage_report.py  test_bucket_candidates.py  test_build_eo_inventory.py  test_candidate_quality_report.py  test_conflict_report.py  test_coverage_report.py  test_docx_to_corpus.py  test_domain_db_writer.py  test_eo_root_decomposer.py  test_extract_definitions.py  test_extract_eurlex_definitions.py  test_extract_wco_glossary.py  test_ingest_eurlex.py  test_link_synonyms.py  test_manual_overrides.py  test_merge_area_candidates.py  test_migrate_v1_to_v2.py  test_review_cli.py  test_statistical_mwe_detector.py
(+52 files in other folders)
